--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.536.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
