--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
     "next": "^14.0.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
